# cpp-on-mobile

./: README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/paulocoutinho/cpponmobile/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/paulocoutinho/cpponmobile/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/paulocoutinho/cpponmobile/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: CMakeLists.txt  main.cpp
ios/: .gitignore
ios/CppOnMobile/: BHeader.h  ContentView.swift  CppOnMobileApp.swift  MyCppFunction.cpp  MyObjcClass.h  MyObjcClass.mm
ios/CppOnMobile.xcodeproj/: project.pbxproj
shared/: MyCppLib.cpp  MyCppLib.hpp
